ingress/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: container-v2
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        ports:
          - containerPort: 8080
            name: http
        readinessProbe: # this is to create custom health check
          httpGet:
            path: /v2
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3

# You see health-checks like /healthz for the default-http-backend service in kube-system because GKE creates it by default as part of the ingress infrastructure. This endpoint is used for the load balancer's health check to ensure the backend is functional—even though you never defined /healthz in your own YAMLs.
# you can override with backendconfig and annotate in ingress
# apiVersion: cloud.google.com/v1
# kind: BackendConfig
# metadata:
#   name: my-backendconfig
#   namespace: YOUR_NAMESPACE
# spec:
#   healthCheck:
#     checkIntervalSec: 10
#     timeoutSec: 5
#     unhealthyThreshold: 3
#     healthyThreshold: 2
#     type: HTTP
#     requestPath: /your-custom-health-path   # Override here; default is /healthz
