ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    #kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.class: "gce" # this is to create internal load balancer
    #kubernetes.io/ingress.global-static-ip-name: "test" # reserve global static ip and provide the name here
    #networking.gke.io/v1beta1.FrontendConfig: "https-redirect-config"
    #kubernetes.io/ingress.allow-http: "false" - Prevents the load balancer from accepting HTTP (port 80) traffic.
    #ingress.gcp.kubernetes.io/pre-shared-cert: certificate-name   - this is to mention certificate from certificate manager. when this is mentioned no need to create secret and  mention tls under spec
    #networking.gke.io/ssl-policy: my-ssl-policy - this is for security purpose only. create it console and mention the name here
spec:
  #tls:                      # This is to add certificate. mention host here if we have public host. if brinding certificate from certificate manager, then this is not required.
  #  - secretName: my-tls-secret
  # defaultBackend:
  #   service:
  #     name: my-custom-default-service
  #     port:
  #       number: 80
  rules:
    - http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: svc-v2
                port:
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: svc-v1
                port:
                  number: 80
